<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="bus_times_location_dropdown_icon_description">Icon indicating drop-down list of locations</string>
    <string name="app_id">BusTimes</string>
    <string name="app_name">Bus Times App</string>
    <string name="mw_placeholder">Displaying on MetaWatch</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_announce">Announce to MW</string>
    <string name="menu_notify">Notify MW</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="msg_no_source_selected">Please select a source of bus times from the settings menu.</string>
    <string name="msg_invalid_source_selected">Your currently selected source of bus times is not valid.  Please select a new source of bus times from the settings menu.</string>
    <string name="msg_unable_to_select_stop">Cannot retrieve bus stop details.  Please enable GPS, or enter preferred bus stop id in the settings.</string>
    <string name="msg_failed_to_get_bus_times">Unable to retrieve bus times.  Please check your internet connection, and try again.</string>
    <string name="msg_no_locator_selected">Please select a Stop locator from the settings menu.</string>
    <string name="msg_invalid_locator_selected">You currently selected Stop locator is not valid.  Please select a new Stop locator from the settings menu.</string>
    <string name="settings_CancelButton">Cancel</string>
    <string name="settings_sources_screen_title">Sources</string>
    <string name="settings_sources_locations_refresh">Refresh Data</string>
    <string name="settings_sources_locations_refresh_desc">Refresh bus stops data for chosen source</string>
    <string name="settings_sources_title">Select Source</string>
    <string name="settings_sources_dialogtitle">Select Source</string>
    <string name="settings_locators_title">Select Locator</string>
    <string name="settings_locators_dialogtitle">Select Locator</string>
    <string name="settings_preferred_stop_id_title">Preferred Stop ID</string>
    <string name="settings_preferred_stop_id_desc">The ID of your preferred bus stop</string>
    <string name="settings_metawatch_screen_title">Meta Watch</string>
    <string name="settings_metawatch_register">Register with MWM</string>
    <string name="settings_metawatch_register_desc">Attempts to register as a watch application with the currently installed Meta Watch Manager</string>
    <string name="settings_stops_title">Stops List</string>
    <string name="settings_stops_desc">Cache of Stops downloaded from chosen source</string>
    <string name="location_selection_stop_code_filter_label">Stop</string>
    <string name="location_selection_stop_code_filter_button">Find</string>
    <string name="location_selection_stop_code_gps">GPS</string>
    <string name="configure_source_icon_desc">icon indicating more options</string>
    <string name="configure_source_label">Data Source</string>
    <string name="configure_add_location_by_code_button">Specify\nLocation</string>
    <string name="configure_source_refresh_data_button">Refresh Locations Data</string>
    <string name="select_location_map_info_window_chosen_icon">Icon indicating if the location is \'selected\' or not</string>
    <string name="map_info_window_choose_button">Favourite</string>
    <string name="map_info_window_stop_name_label">Stop Name</string>
    <string name="map_info_window_nick_name_label">Nickname</string>
    <string name="map_info_window_monitored_label">Monitored</string>
    <string name="map_info_window_monitored_on">Monitored</string>
    <string name="map_info_window_monitored_off">Not monitored</string>
    <string name="map_info_window_dismiss">Close</string>
    <string name="fav_locations_list_label">Favourites</string>
    <string name="fav_locations_add_location_button">Add</string>
    <string name="manage_sources_list_label">Available Sources</string>
    <string name="source_actions_popup_install">Install</string>
    <string name="source_actions_popup_refresh">Refresh</string>
    <string name="source_actions_popup_uninstall">Uninstall</string>
    <string name="menu_add_favourite">Add</string>
    <string name="menu_manage_sources">Manage Sources</string>
    <string name="menu_view_favourites">View Favs</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search_locations">Search</string>
    <string name="location_actions_edit">Edit</string>
    <string name="location_actions_show_on_map">Show</string>
    <string name="location_actions_make_favourite">Select</string>
    <string name="location_actions_unmake_favourite">Deselect</string>
    <string name="select_location_find_location_hint">Location</string>
    <string name="find_location_textfield_hint">Stop code, post code, etc</string>
    <string name="debug_task_dump_locations">Dump Locations</string>

    <string-array name="settings_sources_names">
        <item>London, UK (TFL)</item>
    </string-array>
    <string-array name="settings_sources_values">
        <item>londonuk-tfl</item>
    </string-array>
    <string-array name="settings_locators_names">
        <item>Manually enter Stop ID</item>
    </string-array>
    <string-array name="settings_locators_values">
        <item>PreferredLocationLocator</item>
    </string-array>
    
    <string-array name="pref_refresh_rates_names">
        <item>Source default</item>
        <item>30 seconds</item>
        <item>60 seconds</item>
    </string-array>
    <string-array name="pref_refresh_rates_values">
        <item>SOURCE_DEFAULT</item>
        <item>THIRTY_SECONDS</item>
        <item>SIXTY_SECONDS</item>
    </string-array>
    <string name="pref_refresh_rates_default">SOURCE_DEFAULT</string>
    
    <string-array name="pref_metawatch_firmware_types_names">
        <item>Producation</item>
        <item>Developer</item>
    </string-array>
    <string-array name="pref_metawatch_firmware_types_values">
        <item>PRODUCTION</item>
        <item>DEVELOPER</item>
    </string-array>
	<string name="pref_metawatch_firmware_types_default">PRODUCTION</string>
    <string name="title_activity_select_location">Select Location</string>
    <string name="title_activity_favourite_locations">Favourites</string>
    <string name="title_activity_bus_times">Bus Times</string>
    <string name="title_activity_manage_sources">Manage Sources</string>
    <string name="title_activity_debug_tasks">DebugTasksActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>