<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceScreen android:title="@string/settings_sources_screen_title">
        <Preference
            android:title="@string/settings_sources_locations_refresh" 
            android:key="RefreshLocations"
            android:summary="@string/settings_sources_locations_refresh_desc" />
        
	    <ListPreference
	        android:entries="@array/settings_sources_names"
	        android:entryValues="@array/settings_sources_values"
	        android:dialogTitle="@string/settings_sources_dialogtitle"
	        android:key="sourceID"
	        android:title="@string/settings_sources_title"
	        android:negativeButtonText="@string/settings_CancelButton"
	        android:enabled="true" />        
	</PreferenceScreen>
	    
    <ListPreference
        android:entries="@array/settings_locators_names"
        android:entryValues="@array/settings_locators_values"
        android:dialogTitle="@string/settings_locators_dialogtitle"
        android:key="locatorID"
        android:title="@string/settings_locators_title"
        android:negativeButtonText="@string/settings_CancelButton"
        android:enabled="true" />        

    <EditTextPreference
        android:title="@string/settings_preferred_stop_id_title"
        android:key="PreferredStopID"
        android:summary="@string/settings_preferred_stop_id_desc"
        android:defaultValue="" />
    
    <EditTextPreference
        android:title="@string/settings_stops_title"
        android:key="Stops"
        android:summary="@string/settings_stops_desc"
        android:defaultValue="" />
    
    <PreferenceScreen android:title="@string/settings_metawatch_screen_title">
        <Preference
            android:title="@string/settings_metawatch_register" 
            android:key="Announce"
            android:summary="@string/settings_metawatch_register_desc" />
        
    </PreferenceScreen>
</PreferenceScreen>