<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#BBBBBB"
    android:orientation="vertical"
    android:padding="10dp" 
    android:layout_margin="20dp">
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/map_info_window_stop_name_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.3"
	        android:textIsSelectable="false"
            android:text="@string/map_info_window_stop_name_label"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/map_info_window_stop_name_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.7"
	        android:textIsSelectable="false"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	</LinearLayout>
   	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/map_info_window_nick_name_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.3"
	        android:textIsSelectable="false"
            android:text="@string/map_info_window_nick_name_label"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/map_info_window_nick_name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:inputType="text"
            android:minEms="5" >
	            <requestFocus />
        </EditText>
	    		    	    
    </LinearLayout>
   	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/map_info_window_monitored_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.3"
	        android:textIsSelectable="false"
            android:text="@string/map_info_window_monitored_label"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <Button
	        android:id="@+id/map_info_window_monitored_button"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.7"
	        android:text="@string/map_info_window_monitored_off" />
   	    	    
	</LinearLayout>
	
    <Button
        android:id="@+id/map_info_window_dismiss_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:text="@string/map_info_window_dismiss" />

    <TextView
        android:id="@+id/map_info_window_stop_code_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
</LinearLayout>