<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    tools:context=".SelectLocationActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/select_location_stop_code_filter_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_selection_stop_code_filter_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/select_location_stop_code_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:minEms="5" >
	            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/select_location_stop_code_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_selection_stop_code_filter_button"
            android:onClick="onFindStopCodeClicked" />

        <ToggleButton
            android:id="@+id/select_location_show_gps_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onToggleGPSClicked"
            android:textOff="@string/location_selection_stop_code_gps"
            android:textOn="@string/location_selection_stop_code_gps" />

    </LinearLayout>

    <fragment 
        android:id="@+id/locationSelectionMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />

</LinearLayout>
